# Nbody-simulation

./: CMakeLists.txt  README.md
include/: body.hpp  kernel.cuh  launcher.cuh  render.hpp
kernel/: launcher.cu
lib/: body.cpp  render.cpp
src/: main.cpp
tests/: tests.cpp
